--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --progress --port 3000 --inline --hot --content-base public",
+    "build": "webpack",
     "seed": "node seed.js"
   },
   "author": "jake regan",
