--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --progress --port 3000 --inline --hot --content-base public",
+    "start": "webpack-dev-server",
     "build": "webpack",
+    "lint": "eslint app",
     "seed": "node seed.js"
   },
   "author": "jake regan",
@@ -35,7 +36,10 @@
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.4.2",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.14.1",
+    "eslint-plugin-react": "^6.9.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -43,11 +47,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
     "node-sass": "^4.5.3",
+    "react-hot-loader": "^3.0.0-beta.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.8.2"
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0"
   }
 }
