--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "jake regan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "connect-session-sequelize": "^4.1.0",
     "crypto": "0.0.3",
