--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-eslint": "^7.1.1",
     "body-parser": "^1.17.2",
     "connect-session-sequelize": "^4.1.0",
     "crypto": "0.0.3",
+    "eslint": "^3.14.1",
+    "eslint-plugin-react": "^6.9.0",
     "express": "^4.15.3",
     "express-session": "^1.15.5",
     "materialize-css": "^0.100.2",
@@ -25,11 +28,8 @@
     "passport-google-oauth": "^1.0.0",
     "pg": "^7.1.0",
     "pg-hstore": "^2.3.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "react-materialize": "^1.0.10",
     "react-redux": "^5.0.5",
-    "react-router-dom": "^4.2.2",
     "recharts": "^1.0.0-alpha.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -37,13 +37,12 @@
     "sequelize": "^4.4.2",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.14.1",
-    "eslint-plugin-react": "^6.9.0"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
@@ -53,7 +52,9 @@
     "react-hot-loader": "^3.0.0-beta.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
