--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -w & nodemon server & nodemon server/db/index.js",
+    "start": "webpack -w & nodemon server.js",
     "seed": "node seed.js"
   },
   "author": "jake regan",
