--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.5",
     "history": "^4.7.2",
+    "material-ui": "^0.19.2",
     "materialize-css": "^0.100.2",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
