--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
@@ -54,10 +56,9 @@
     "css-loader": "^0.28.4",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
+    "remote-redux-devtools": "^0.5.12",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
