--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.74.2",
     "sequelize": "^4.4.2",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
