auth logic now use jwt tokens. refactor includes both provider logins and local auth.

--- a/package.json
+++ b/package.json
@@ -15,20 +15,13 @@
     "axios": "^0.16.2",
     "babel-eslint": "^7.1.1",
     "body-parser": "^1.17.2",
-    "crypto": "0.0.3",
-    "express": "^4.15.3",
-    "express-session": "^1.15.5",
     "history": "^4.7.2",
     "material-ui": "^0.19.2",
     "materialize-css": "^0.100.2",
-    "morgan": "^1.8.2",
-    "passport": "^0.3.2",
-    "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0",
-    "pg": "^7.1.0",
-    "pg-hstore": "^2.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-facebook-login": "^3.6.2",
+    "react-google-login": "^3.0.1",
     "react-materialize": "^1.0.10",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
@@ -40,7 +33,6 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.74.2",
-    "sequelize": "^4.4.2",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   },
